# PyMonitor

./: .gitignore  CHANGELOG.md  DATABASE_MIGRATION.md  MIGRATION_GUIDE.md  README.md  REANIMATOR.md  WEB_EXPLORER.md  basic.db  function_call.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.json
docs/: api.md  openapi.json  reanimation.md
examples/: basic.db  basic.db-journal  basic.py  basic2.py  basic3.db  basic3.py  custom_objects.py  monitoring.jsonl  new_api_demo.py  reanimation_example.py  reanimator_example.py  test_custom_objects.py  test_nested_list.py  versioning_example.py
examples/binary_search/: main.py
examples/flappy/: flappy.db  flappy.py  flappy2.py  flappy_new.py  instrumented.db  instrumented.py  run_and_replay.py  simple_replay.py  testevent.py
examples/flappy/performance/: flappy_full.py  flappy_monitor_woscreen.py  flappy_no_monitor.py
examples/image_processing/: main.py
examples/mario/: mario.py
examples/old/: basic.py  basic2.py  basic3.py  custom_pickle_example.py  custom_picklers_example.py  delete_execution_example.py  reanimation_example.py  reanimator_example.py
examples/performance/: main.py  main_function.py  main_line.py  main_line_tag.py  show.py
examples/performance2/: main.py  main_function.py  main_line.py  main_line_partial.py  show.py
examples/resume/: explore_main.py  main.db  main.py
examples/simple/: main.db  main.py  main1.db  main1.py  reexc.py  replay.py
performance/: README.md  compliverec.py  main_function.py  main_line_tag.py  perf.db  perf.py  performance.ipynb  performance_test_isolated.py  profile_test.py  size_of_arg.py  test_direct_monitoring.py  test_no_monitoring.py  test_offload_monitoring.py
performance/humaneval/: .gitignore  analyze_results.ipynb  combine_results.py  extract_data.py  humaneval_performance_results.json  humanevalplus.parquet  run.py  utils.py
scripts/: cleanup_db.py  fix_human_keys.py
src/: __init__.py  extension.ts
src/monitoringpy/: __init__.py  class_loader.py  cli.py  code_manager.py  db_models.py  db_operations.py  function_call.py  generate_graph.py  mcp_server.py  migrate_db.py  models.py  monitoringpy.py  pygame.py  reanimator.py  representation.py  web_explorer.py  worker.py
src/monitoringpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/monitoringpy/codediff/: .gitignore  __init__.py  download_gumtree.py  graph_generator.py  gumtree_utils.py  main.py  test_graph_generator.py
src/monitoringpy/core/: __init__.py  code_manager.py  function_call.py  models.py  monitoring.py  reanimation.py  representation.py  session.py  trace.py
src/monitoringpy/interface/: __init__.py  explore.py  explore_pygame.py
src/monitoringpy/picklers/: __init__.py  pygame.py  turtle.py
src/monitoringpy/templates/: base.html  compare_traces.html  function_call.html  graph.html  index.html  navbar.html  stack_trace.html  stack_traces.html
src/spacetimepy/: __init__.py
src/spacetimepy/codediff/: __init__.py  download_gumtree.py  main.py  test_graph_generator.py
src/spacetimepy/core/: __init__.py  code_manager.py  function_call.py  models.py  monitoring.py  reanimation.py  representation.py  session.py
src/spacetimepy/interface/: __init__.py
src/spacetimepy/picklers/: __init__.py
tests/: README.md  nonexistent.db  run_tests.py  test_db_operations.py  test_function_call.py  test_object_manager.py  test_representation.py
webapp/: app.py  data.jsonl  execution_graph.dot  generate_graph.py  monitor.py  monitor_config.json  search.py  test.py  test2.py
(+41 files in other folders)
