[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymonitor"
version = "0.1.0"
description = "A Python monitoring tool for tracking function execution"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "LiveProbes" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bytecode>=0.16.2",
    "debugpy>=1.8.14",
    "fastapi>=0.115.12",
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "pillow>=11.2.1",
    "pygame>=2.6.1",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.34.2",
]

[project.scripts]
web-pymonitor = "monitoringpy.interface.web.explorer:main"
game-explorer = "monitoringpy.interface.gameexplorer.gameexplorer:main"

[tool.hatch.build.targets.wheel]
packages = ["src/monitoringpy"] 
